--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.4.3"
+futures = "0.3.26"
+glommio = "0.8.0"
 rust-crypto = "0.2.36"
 
 [dev-dependencies]
