--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ rand = "0.8.5"
 [profile.dev]
 opt-level = 2
 
-[[bench]]
-name = "kvs"
-harness = false
-opt-level = 2
+# [[bench]]
+# name = "kvs"
+# harness = false
+# opt-level = 2
