--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 byteorder = "1.4.3"
 futures = "0.3.26"
-glommio = "0.8.0"
 rust-crypto = "0.2.36"
+# monoio = "0.1.7"
+monoio = { path = "../monoio/monoio" }
+monoio-compat = "0.1.2"
+tokio = { version = "1.30.0", features = ["net"] }
 
 [dev-dependencies]
 criterion = "0.4.0"
