--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-byteorder = "1.4.3"
-futures = "0.3.26"
+byteorder = "1.5.0"
+futures = "0.3.30"
 rust-crypto = "0.2.36"
-# monoio = "0.1.7"
-monoio = { path = "../monoio/monoio" }
+monoio = "0.2.3"
+# monoio = { path = "../monoio/monoio" }
 monoio-compat = "0.1.2"
-tokio = { version = "1.30.0", features = ["net"] }
+tokio = { version = "1.37.0", features = ["net"] }
 
 [dev-dependencies]
 criterion = "0.4.0"
