--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ io-uring = { version = "0.6"}
 monoio-compat = "0.1.2"
 async-trait = "^0.1.81"
 tokio = { version = "1.37.0", features = ["net"] }
+structopt = "0.3.26"
 
 [dev-dependencies]
 criterion = "0.4.0"
